# rust-bevy-rapier-sim-arm

./: Cargo.toml  README.md
assets/arm/: hand.mtl  kles2.mtl  paint.mtl
example/: main1.rs
src/: main.rs
